--- a/akelius_site_with.html
+++ b/akelius_site_with.html
@@ -15,7 +15,7 @@
     .bar { max-width:var(--maxw); margin:0 auto; padding:10px 16px; display:flex; align-items:center; justify-content:space-between; gap:12px; flex-wrap:nowrap; }
     .brand { font-weight:600; color:var(--brand); letter-spacing:.2px; white-space:nowrap; }
 
-    /* Языковой переключатель закреплён справа, не переносится */
+    /* !Языковой переключатель закреплён справа, не переносится */
     .lang { margin-left:auto; display:flex; align-items:center; gap:6px; white-space:nowrap; }
     .lang button { border:1px solid #d0d7de; background:#fff; color:#111; padding:6px 10px; border-radius:8px; font-size:14px; line-height:1; cursor:pointer; }
     .lang button.active { border-color: var(--brand); color: var(--brand); font-weight:600; }
