--- a/akelius_site_with.html
+++ b/akelius_site_with.html
@@ -766,14 +766,24 @@ footer{background:linear-gradient(135deg,#2d3748 0%,#1a202c 100%);color:#e2e8f0;
     // Инициализация второй карты Казахстана
     if (document.getElementById('map2')) {
       // Центр карты - Казахстан
-      const map2 = L.map('map2').setView([48.0, 66.0], 6);
+      // Отключаем стандартный контрол атрибуции (убирает подписи типа © OpenStreetMap / Stamen)
+      const map2 = L.map('map2', { attributionControl: false }).setView([48.0, 66.0], 6);
 
-      // Добавление минималистичных тайлов (только границы, без лишних деталей)
-      // Используем CartoDB Positron - светлая минималистичная карта
-      L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-        attribution: '',
+      // Добавление минималистичных тайлов: базовая плитка без подписей + прозрачный слой подписей сверху
+      // Базовый слой (минималистичный) - CartoDB (без подписей если доступен)
+      L.tileLayer('https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png', {
+        attribution: '&copy; OpenStreetMap &amp; CartoDB',
         maxZoom: 29,
         subdomains: 'abcd'
+      }).addTo(map2);
+
+      // Наложение: прозрачный слой только с подписями (labels-only)
+      // Используем Stamen toner-labels (прозрачный фон, только подписи)
+      L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner-labels/{z}/{x}/{y}.png', {
+        attribution: 'Map tiles by Stamen',
+        maxZoom: 20,
+        subdomains: 'abcd',
+        opacity: 0.95
       }).addTo(map2);
 
       // Загрузка точных границ Казахстана из GeoJSON
