--- a/akelius_site_with.html
+++ b/akelius_site_with.html
@@ -815,7 +815,9 @@ footer{background:linear-gradient(135deg,#2d3748 0%,#1a202c 100%);color:#e2e8f0;
                   opacity: 0.8
                 }
               }).addTo(map);
-              map.fitBounds(layer.getBounds(), { padding: [8, 8] });
+              const bounds = layer.getBounds();
+              const targetZoom = map.getBoundsZoom(bounds);
+              map.setView(bounds.getCenter(), targetZoom + 0.25);
               return true;
             }
             throw new Error('Kazakhstan not found in data');
@@ -837,7 +839,9 @@ footer{background:linear-gradient(135deg,#2d3748 0%,#1a202c 100%);color:#e2e8f0;
                     opacity: 0.8
                   }
                 }).addTo(map);
-                map.fitBounds(layer.getBounds(), { padding: [8, 8] });
+                const bounds = layer.getBounds();
+                const targetZoom = map.getBoundsZoom(bounds);
+                map.setView(bounds.getCenter(), targetZoom + 0.25);
                 return true;
               })
               .catch(() => {
@@ -865,7 +869,9 @@ footer{background:linear-gradient(135deg,#2d3748 0%,#1a202c 100%);color:#e2e8f0;
                             opacity: 0.8
                           }
                         }).addTo(map);
-                      map.fitBounds(layer.getBounds(), { padding: [8, 8] });
+                        const bounds = layer.getBounds();
+                        const targetZoom = map.getBoundsZoom(bounds);
+                        map.setView(bounds.getCenter(), targetZoom + 0.25);
                       return true;
                     }
                     throw new Error('Kazakhstan not found');
@@ -888,7 +894,9 @@ footer{background:linear-gradient(135deg,#2d3748 0%,#1a202c 100%);color:#e2e8f0;
                       fillOpacity: 0.5,
                       opacity: 0.8
                     }).addTo(map);
-                    map.fitBounds(layer.getBounds(), { padding: [8, 8] });
+                    const bounds = layer.getBounds();
+                    const targetZoom = map.getBoundsZoom(bounds);
+                    map.setView(bounds.getCenter(), targetZoom + 0.25);
                   });
               });
           });
